Retry indefinitively when we get a connection error in async mode. Fixed a potential NPE. Made the oneFilter optional in annotations
One more rety on communication failure